test/link/script-typeless-bank.link
"The section isn't even known"
